<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent" android:layout_height="wrap_content">

        <TextView android:text="@string/date_range" android:textStyle="bold"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFromDate"
                    android:focusable="false"
                    android:hint="@string/from_yyyy_mm_dd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etToDate"
                    android:focusable="false"
                    android:hint="@string/to_yyyy_mm_dd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView android:text="@string/tag" android:textStyle="bold"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginTop="12dp"/>
        <Spinner
            android:id="@+id/spTag"
            android:layout_width="match_parent" android:layout_height="wrap_content" />

        <TextView android:text="@string/probability_range" android:textStyle="bold"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginTop="12dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent" android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProbMin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/min"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Space android:layout_width="8dp" android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProbMax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/max"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView android:text="@string/resolved_status" android:textStyle="bold"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginTop="12dp"/>
        <Spinner
            android:id="@+id/spStatus"
            android:layout_width="match_parent" android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>