<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimaryContainer">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent" android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSettingsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="?attr/colorPrimary"
            android:paddingBottom="8dp" />

        <TextView
            android:id="@+id/tvThemeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:paddingBottom="4dp" />

        <Spinner
            android:id="@+id/spTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorOutline"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvInfoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="?attr/colorPrimary"
            android:paddingTop="8dp"
            android:paddingBottom="6dp" />

        <TextView
            android:id="@+id/tvInfoBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AppInformation"
            android:textSize="15sp"
            android:lineSpacingExtra="4dp"
            android:textColor="?attr/colorOnBackground" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorOutline"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvDataHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="?attr/colorPrimary"
            android:paddingTop="8dp"
            android:paddingBottom="6dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExport"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_predictions_to_file"
            android:layout_marginTop="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnImport"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_predictions_from_file"/>

<!--        Below is the delete all predictions button, requires uncomment code in java file-->
<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/btnDeleteAll"-->
<!--            style="@style/Widget.Material3.Button.TonalButton"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Delete ALL predictions"-->
<!--            android:layout_marginTop="8dp"/>-->

    </LinearLayout>
</ScrollView>