<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimaryContainer">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/filterBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:gravity="end">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:singleSelection="true"
                app:selectionRequired="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCalib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calibration"
                    android:minWidth="0dp"
                    android:paddingStart="9dp"
                    android:paddingEnd="9dp"
                    app:cornerRadius="9dp"
                    android:checkable="true"
                    style="@style/calibrate.OutlinedButton"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSharp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:paddingStart="9dp"
                    android:paddingEnd="9dp"
                    app:cornerRadius="9dp"
                    android:text="@string/sharpness"
                    android:checkable="true"
                    style="@style/calibrate.OutlinedButton"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnScore"
                    android:checkable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:minWidth="0dp"
                    android:paddingStart="9dp"
                    android:paddingEnd="9dp"
                    app:cornerRadius="9dp"
                    style="@style/calibrate.OutlinedButton"/>
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <Space android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                android:minWidth="0dp"
                android:paddingStart="9dp"
                android:paddingEnd="9dp"
                app:cornerRadius="9dp"
                app:icon="@drawable/ic_filter_24"
                app:iconGravity="textStart"/>
        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/sharpnessChart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data_to_display"
            android:gravity="center"
            android:padding="16dp"
            android:visibility="gone"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>