<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:hint="@string/hint_prediction_title"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hint_probability"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderProb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="100"
        android:value="50"
        android:stepSize="1"
        app:tickVisible="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_optional"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:maxLines="6"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="12dp" android:gravity="center_vertical">

        <View
            android:id="@+id/viewTagColor"
            android:layout_width="20dp" android:layout_height="20dp"
            android:background="#00000000" android:layout_marginEnd="12dp"/>

        <Spinner
            android:id="@+id/spinnerTag" android:textColor="?attr/colorSecondary"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>